@@ -4,6 +4,9 @@ Revision history for Dist-Mgr
     - Bump prereq version of File::Copy::Recursive, as older versions of perl
       came with v0.38 which didn't export rmove_glob(), which would cause tests
       to fail. We now require v0.45
+    - Added _dist_dir_re(), contains the distribution's directory for using in
+      testing to confirm we're in the proper location in the file system. Some
+      CPAN testers use varying dir names, so tests were failing
 
 1.05    2021-01-13
     - Change -x to -w in distmgr POD
